Fixed body background to adjuct to page on which user is, prevent annoying scrolling behaviour on mobile, preventing user from zooming when he is on mobile.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -190,7 +190,14 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
-/*---break---*/
+/*_PREVENTING ANNOYING SCROLLING BEHAVIOUR ON PHONE_*/
+html,
+body {
+  position: fixed;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
 
 @layer base {
   * {
